--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
             <p>@gempita_jaya_x</p>
         </a>
 
-        <a href="mailto:karangtaruna@email.com" class="glass-card hover-effect contact-card">
+        <a href="mailto:gempitajayaX@gmail.com" class="glass-card hover-effect contact-card">
             <i class="fas fa-envelope"></i>
             <h3>Email</h3>
-            <p>karangtaruna@email.com</p>
+            <p>gempitajayaX@gmail.com</p>
         </a>
     </div>
 </section>
@@ -348,3 +348,4 @@
 
 </body>
 </html>
+
